objects/LAT_DataCollect__c.object
<CustomObject>
    <fields>
        <fullName>AgrupamentoProdutos__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Produtos</label>
        <referenceTo>LAT_ReferenceProductGrouping__c</referenceTo>
        <relationshipLabel>Dados a coletar</relationshipLabel>
        <relationshipName>AgrupamentoProdutos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Descrição</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Produto</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotional_Action__c</fullName>
        <label>Promotional Action</label>
        <referenceTo>LAT_PromotionalAction__c</referenceTo>
        <relationshipLabel>Dados a coletar</relationshipLabel>
        <relationshipName>LAT_DataCollect</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Dado a coletar</label>
    <nameField>
        <displayFormat>CD-{0000}</displayFormat>
        <label>Coleta Datos Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dados a coletar</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>